# brisque_impl

./: .gitmodules  BrisqueAlgorithm.cpp  BrisqueInterop.cpp  CMakeLists.txt  LICENSE  README.md  build_windows.ps1  main.cpp  vcpkg.json
.github/workflows/: build.yml  windows.yml
includes/: BrisqueAlgorithm.hpp  BrisqueInterop.h
